Heatmaps being created from workout route data. Hallelujah...

--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -499,7 +499,7 @@ DQoNCg
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="4yf-me-rrw"/>
+        <segue reference="UHU-qN-G4m"/>
     </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="buttonPrimary">
