--- a/Heatmapper/View/fartlekCell.xib
+++ b/Heatmapper/View/fartlekCell.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FartlekTableViewCell" customModule="FIT" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FartlekTableViewCell" customModule="Heatmapper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="401" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -19,10 +19,10 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hkl-cc-Ig2" userLabel="Duration Container View">
                             <rect key="frame" x="2" y="4" width="130.5" height="40"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8jN-UI-luV" userLabel="Duration View" customClass="ThemeShadowView" customModule="FIT" customModuleProvider="target">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8jN-UI-luV" userLabel="Duration View" customClass="ThemeShadowView" customModule="Heatmapper" customModuleProvider="target">
                                     <rect key="frame" x="4" y="4" width="122.5" height="32"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLo-gN-4MN" userLabel="Duration" customClass="ThemeMediumNumericUILabel" customModule="FIT" customModuleProvider="target">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLo-gN-4MN" userLabel="Duration" customClass="ThemeMediumNumericUILabel" customModule="Heatmapper" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="122.5" height="32"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
@@ -51,11 +51,11 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9gt-G7-LgM" userLabel="Pace Container View">
                             <rect key="frame" x="135.5" y="4" width="130" height="40"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWv-md-wdf" userLabel="Pace View" customClass="ThemeShadowView" customModule="FIT" customModuleProvider="target">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWv-md-wdf" userLabel="Pace View" customClass="ThemeShadowView" customModule="Heatmapper" customModuleProvider="target">
                                     <rect key="frame" x="4" y="4" width="122" height="32"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPw-yT-5at" userLabel="Pace" customClass="ThemeMediumNumericUILabel" customModule="FIT" customModuleProvider="target">
-                                            <rect key="frame" x="11" y="3" width="100" height="26.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPw-yT-5at" userLabel="Pace" customClass="ThemeMediumNumericUILabel" customModule="Heatmapper" customModuleProvider="target">
+                                            <rect key="frame" x="11" y="4.5" width="100" height="23"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="owF-Ix-NJN"/>
                                             </constraints>
@@ -81,10 +81,10 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MKs-TL-bHu" userLabel="Distance Container View">
                             <rect key="frame" x="268.5" y="4" width="130.5" height="40"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UL2-zn-Kro" userLabel="Distance View" customClass="ThemeShadowView" customModule="FIT" customModuleProvider="target">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UL2-zn-Kro" userLabel="Distance View" customClass="ThemeShadowView" customModule="Heatmapper" customModuleProvider="target">
                                     <rect key="frame" x="4" y="4" width="122.5" height="32"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4h-AI-b8O" userLabel="Distance" customClass="ThemeMediumNumericUILabel" customModule="FIT" customModuleProvider="target">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4h-AI-b8O" userLabel="Distance" customClass="ThemeMediumNumericUILabel" customModule="Heatmapper" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="122.5" height="32"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
