--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -72,7 +72,6 @@
                         <segue destination="lih-U6-K2w" kind="show" identifier="mainMenuToSettings" id="0Zd-nq-pHV"/>
                         <segue destination="nCc-eF-wC1" kind="show" identifier="mainMenuToHistory" id="jsl-Go-fze"/>
                         <segue destination="cbs-Dv-Qaf" kind="show" identifier="mainMenuToTracker" id="a4G-zq-cd0"/>
-                        <segue destination="YiQ-y2-7yO" kind="show" identifier="mainMenuToHeatmap" id="4yf-me-rrw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbN-s5-nYY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -119,7 +118,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hZ5-bu-aeX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="114" y="820"/>
+            <point key="canvasLocation" x="3916" y="790"/>
         </scene>
         <!--Workout History-->
         <scene sceneID="QA9-GD-v8L">
@@ -162,11 +161,12 @@
                     <connections>
                         <outlet property="workoutTableView" destination="aWN-Ek-5D4" id="umP-Hq-edH"/>
                         <segue destination="YiQ-y2-7yO" kind="show" identifier="historyToHeatmap" id="UHU-qN-G4m"/>
+                        <segue destination="Pbk-vr-61V" kind="show" identifier="historyToREHeatmap" id="Q5M-hF-bhw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UC3-lr-6fG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2300" y="820"/>
+            <point key="canvasLocation" x="394" y="790"/>
         </scene>
         <!--Help-->
         <scene sceneID="DQ6-Bi-w9U">
@@ -421,6 +421,66 @@ DQoNCg
             </objects>
             <point key="canvasLocation" x="-1164" y="95"/>
         </scene>
+        <!--RE Heatmap-->
+        <scene sceneID="JyV-B9-0oQ">
+            <objects>
+                <viewController title="Heatmap" id="Pbk-vr-61V" userLabel="RE Heatmap" customClass="REHeatmapViewController" customModule="Heatmapper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kHH-B5-aZm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ron-hr-ShN">
+                                <rect key="frame" x="0.0" y="832" width="414" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KhR-k9-Udq" userLabel="Radius Distinct">
+                                        <rect key="frame" x="0.0" y="0.0" width="134.5" height="30"/>
+                                        <state key="normal" title="Radius Distinct"/>
+                                        <connections>
+                                            <action selector="changeToRadiusDistinct:" destination="Pbk-vr-61V" eventType="touchUpInside" id="iD6-xT-NGl"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIR-94-5ja" userLabel="Radius Blurry">
+                                        <rect key="frame" x="139.5" y="0.0" width="135" height="30"/>
+                                        <state key="normal" title="Radius Blurry"/>
+                                        <connections>
+                                            <action selector="ChangeToRadiusBlurry:" destination="Pbk-vr-61V" eventType="touchUpInside" id="fGG-bg-cdO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R6w-n5-X7X" userLabel="Flat Distinct">
+                                        <rect key="frame" x="279.5" y="0.0" width="134.5" height="30"/>
+                                        <state key="normal" title="Flat Distinct"/>
+                                        <connections>
+                                            <action selector="ChangeToFlatDistinct:" destination="Pbk-vr-61V" eventType="touchUpInside" id="BvA-WK-Tgm"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQW-5e-Hla">
+                                <rect key="frame" x="0.0" y="108" width="414" height="624"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dWO-9w-WBa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ron-hr-ShN" firstAttribute="top" secondItem="hQW-5e-Hla" secondAttribute="bottom" constant="100" id="8PB-V4-sNx"/>
+                            <constraint firstItem="hQW-5e-Hla" firstAttribute="top" secondItem="dWO-9w-WBa" secondAttribute="top" constant="20" id="HM5-Xp-IEM"/>
+                            <constraint firstItem="hQW-5e-Hla" firstAttribute="leading" secondItem="ron-hr-ShN" secondAttribute="leading" id="IVi-vW-F7Y"/>
+                            <constraint firstItem="ron-hr-ShN" firstAttribute="leading" secondItem="dWO-9w-WBa" secondAttribute="leading" id="PNr-JE-5Gg"/>
+                            <constraint firstItem="dWO-9w-WBa" firstAttribute="bottom" secondItem="ron-hr-ShN" secondAttribute="bottom" id="hDN-gL-kjB"/>
+                            <constraint firstItem="hQW-5e-Hla" firstAttribute="trailing" secondItem="ron-hr-ShN" secondAttribute="trailing" id="kVz-zR-klA"/>
+                            <constraint firstItem="dWO-9w-WBa" firstAttribute="trailing" secondItem="ron-hr-ShN" secondAttribute="trailing" id="mf8-qp-g2w"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="RE Heatmap" id="yQa-XH-y2d"/>
+                    <connections>
+                        <outlet property="mapsView" destination="hQW-5e-Hla" id="8Vg-YU-foT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xws-kf-RrH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1797" y="790"/>
+        </scene>
         <!--Heatmap-->
         <scene sceneID="QjG-zy-Dks">
             <objects>
@@ -479,12 +539,9 @@ DQoNCg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jp8-LE-TUl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1010.144927536232" y="789.50892857142856"/>
+            <point key="canvasLocation" x="-907" y="1235"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="4yf-me-rrw"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="buttonPrimary">
             <color red="0.12549019607843137" green="0.6705882352941176" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
