--- a/Heatmapper/View/Base.lproj/Main.storyboard
+++ b/Heatmapper/View/Base.lproj/Main.storyboard
@@ -429,6 +429,9 @@ DQoNCg
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lQG-2T-c3p">
+                                <rect key="frame" x="0.0" y="88" width="414" height="744"/>
+                            </mapView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ron-hr-ShN">
                                 <rect key="frame" x="0.0" y="832" width="414" height="30"/>
                                 <subviews>
@@ -455,26 +458,22 @@ DQoNCg
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQW-5e-Hla">
-                                <rect key="frame" x="0.0" y="108" width="414" height="624"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dWO-9w-WBa"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ron-hr-ShN" firstAttribute="top" secondItem="hQW-5e-Hla" secondAttribute="bottom" constant="100" id="8PB-V4-sNx"/>
-                            <constraint firstItem="hQW-5e-Hla" firstAttribute="top" secondItem="dWO-9w-WBa" secondAttribute="top" constant="20" id="HM5-Xp-IEM"/>
-                            <constraint firstItem="hQW-5e-Hla" firstAttribute="leading" secondItem="ron-hr-ShN" secondAttribute="leading" id="IVi-vW-F7Y"/>
+                            <constraint firstItem="dWO-9w-WBa" firstAttribute="trailing" secondItem="lQG-2T-c3p" secondAttribute="trailing" id="Kc9-OT-pNj"/>
+                            <constraint firstItem="ron-hr-ShN" firstAttribute="top" secondItem="lQG-2T-c3p" secondAttribute="bottom" id="PLE-hz-y02"/>
                             <constraint firstItem="ron-hr-ShN" firstAttribute="leading" secondItem="dWO-9w-WBa" secondAttribute="leading" id="PNr-JE-5Gg"/>
+                            <constraint firstItem="lQG-2T-c3p" firstAttribute="leading" secondItem="dWO-9w-WBa" secondAttribute="leading" id="ddg-NG-ScJ"/>
                             <constraint firstItem="dWO-9w-WBa" firstAttribute="bottom" secondItem="ron-hr-ShN" secondAttribute="bottom" id="hDN-gL-kjB"/>
-                            <constraint firstItem="hQW-5e-Hla" firstAttribute="trailing" secondItem="ron-hr-ShN" secondAttribute="trailing" id="kVz-zR-klA"/>
                             <constraint firstItem="dWO-9w-WBa" firstAttribute="trailing" secondItem="ron-hr-ShN" secondAttribute="trailing" id="mf8-qp-g2w"/>
+                            <constraint firstItem="lQG-2T-c3p" firstAttribute="top" secondItem="dWO-9w-WBa" secondAttribute="top" id="t8V-SK-oUo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="RE Heatmap" id="yQa-XH-y2d"/>
                     <connections>
-                        <outlet property="mapsView" destination="hQW-5e-Hla" id="8Vg-YU-foT"/>
+                        <outlet property="mapView" destination="lQG-2T-c3p" id="AGg-3I-kSX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xws-kf-RrH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
